tests/check-contents/check-contents.exp
syntax_error.js
Error: syntax_error.js:4
  4: 
     ^ Unexpected end of input


Found 1 error
syntax_error.js (no filename)
Error: -:4
  4: 
     ^ Unexpected end of input


Found 1 error


not_flow.js

Error: not_flow.js:1
  1: 1 * 'foo';
         ^^^^^ string. The operand of an arithmetic operation must be a number.


Found 1 error


not_flow.js with --all

Error: not_flow.js:1
  1: 1 * 'foo';
         ^^^^^ string. The operand of an arithmetic operation must be a number.


Found 1 error


not_flow.js with --respect-pragma

File is not @flow!


not_flow.js with --respect-pragma and --all

Warning: --all and --respect-pragma cannot be used together. --all wins.
Error: not_flow.js:1
  1: 1 * 'foo';
         ^^^^^ string. The operand of an arithmetic operation must be a number.


Found 1 error


unsaved_foo.js depends on bar.js which is still checked against foo.js

No errors!
